synchronization Store + encrypted the password